--- a/_posts/2015-08-14-blog-post-4.md
+++ b/_posts/2015-08-14-blog-post-4.md
@@ -1,5 +1,5 @@
 ---
-title: 'Blog Post number 4'
+title: 'Sample Blog Post'
 date: 2015-08-14
 permalink: /posts/2012/08/blog-post-4/
 tags:
@@ -8,13 +8,16 @@ tags:
   - category2
 ---
 
-This is a sample blog post. Lorem ipsum I can't remember the rest of lorem ipsum and don't have an internet connection right now. Testing testing testing this blog post. Blog posts are cool.
+You weren't supposed to see this
 
-Headings are cool
-======
+[comment]: <> (Headings are cool)
 
-You can have many headings
-======
+[comment]: <> (======)
 
-Aren't headings cool?
-------
+[comment]: <> (You can have many headings)
+
+[comment]: <> (======)
+
+[comment]: <> (Aren't headings cool?)
+
+[comment]: <> (------)
